# mod

./: .drone.jsonnet  .drone.yml  Brewfile  CMakeLists.txt  ChangeLog.rst  bootstrap.sh  changes.html  compiling.html  genindex.html  index.html  installation.html  knownIssues.html  objects.inv  py-modindex.html  references.html  requirements.txt  requirements_nodoc.txt  search.html  searchindex.js
cmake/: CoverageBuild.sh  MODUtils.cmake
conda/: build.Dockerfile  build.sh  conda_build_config.yaml  environment.yaml  meta.yaml
develop/: .buildinfo  changes.html  compiling.html  genindex.html  index.html  installation.html  knownIssues.html  objects.inv  py-modindex.html  search.html  searchindex.js
develop/_static/examples/pymod_extension/: CMakeLists.txt
dgStrat/: index.html
doc/: CMakeLists.txt  makeDocs.sh
docker/: Arch.Dockerfile  Conda.Dockerfile  Fedora.Dockerfile  Ubuntu.Dockerfile
epim/: index.html
examples/: 000_basics.html  010_rc.html  020_dg.html  030_stereo.html  900_epim.html  CMakeLists.txt  index.html
exe/: index.html
formats/: index.html
graphModel/: index.html
libmod/: Chem.html  Config.html  Derivation.html  Error.html  Function.html  GraphConcepts.html  Misc.html  Post.html  Term.html  VertexMap.html  api.html  index.html  usage.html
postmod/: index.html
pymod/: Chem.html  Config.html  Derivation.html  Error.html  Misc.html  Post.html  api.html  extensions.html  index.html  protocols.html
scripts/: checkJsonVisibility.sh  flake8.sh  jla_build.sh  makeConda.sh  makeDepGraph.sh  makeDocker.sh  makePyExamples.py  mypy.sh  (+1 more)
(+645 files in other folders)
